fresh yarn.lock, fix species button overflow

--- a/src/global/styles.scss
+++ b/src/global/styles.scss
@@ -132,6 +132,7 @@ svg {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  min-width: 50px;
 }
 
 @for $i from 1 through 5 {
